# assembly_sum

./: .gitignore  CMakeLists.txt  Makefile.macos  Makefile.windows  README.md  add_arm64.s  build.sh  main_macos.c  main_windows.c  sum_macos_arm64.s  sum_windows_x64.asm  sum_x86.s
src/: add_x86.s  add_x86_nasm.asm  sum_arm64.s  sum_x86_nasm.asm
tests/: run_sum_test.py
